# XGA

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  build_publish_procedure.md  conda-lock.yml  conda_env_notes.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: joss_paper_draft.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  test_build.yml
conda_envs/: conda_env_notes.md  mac_arm_environment.yml
derivations/: hydrostatic_mass_models.ipynb
docker/: Dockerfile  heasoft_download.py
docs/: requirements.txt
docs/example_config/: xga.cfg
docs/example_notebooks/: hierarchical_clustering_peak_finding.ipynb
docs/source/: advanced_tutorials.rst  conf.py  examples.rst  future.rst  general_demo_link.rst  index.rst  install.rst  intro.rst  modules.rst  multi.rst  parallelism.rst  pipeline_tutorials.rst  publications.csv  publications.rst  support.rst  techniques.rst  tutorials.rst  xga.ciao.rst  xga.esass.rst  xga.generate.rst  xga.imagetools.rst  xga.models.rst  xga.multitelescope.rst  xga.products.rst  xga.relations.clusters.rst  xga.relations.rst  xga.rst  xga.samples.rst  xga.sas.rst  xga.sources.rst  xga.sourcetools.rst  xga.tests.rst  xga.tools.rst  xga.xspec.fit.rst  xga.xspec.rst
experiments/: deprojection_experiments.ipynb  xga_psf_experiments.ipynb
paper/: paper.bib  paper.md
test_data/: 0201901401_sources.reg  0201903501_sources.reg  0404910601_sources.reg  census.csv  xga.cfg
tests/: README.md  __init__.py  all_test_and_badge.sh  prepare_data.py  pytest.ini  run.py  source_info.py  utils.py
tests/generate/: test_esass_misc.py  test_esass_phot.py  test_esass_spec.py
tests/imagetools/: __init__.py  test_it_misc.py
tests/sources/: test_base_source.py
tests/sourcetools/: __init__.py  test_common.py  test_density.py  test_entropy.py  test_mass.py  test_st_misc.py  test_temperature.py
tests/test_data/: template_daxa.cfg  test_template_daxa.cfg  xga.cfg
tests/test_generate/: test_ciao_phot.py  test_ciao_spec.py  test_esass_lightcurve.py  test_esass_misc.py  test_esass_phot.py  test_esass_spec.py  test_sas_lightcurve.py  test_sas_phot.py  test_sas_spec.py
tests/test_imagetools/: __init__.py  test_misc.py
tests/test_products/: __init__.py  test_profile.py
tests/test_samples/: test_base.py
tests/test_sources/: __init__.py  test_base.py  test_base_source.py  test_combined_products.py  test_extended.py  test_loading.py  test_retrieval_correctness.py
tests/test_sourcetools/: test_common.py  test_density.py  test_entropy.py  test_mass.py  test_temperature.py
tests/test_utils/: test_utils.py
tests/test_xspec/: test_fit_general.py  test_fit_profile.py
tests/xspec/: test_fit_profile.py
xga/: __init__.py  _version.py  exceptions.py  imagetools.py  products.py  sas.py  sources.py  sourcetools.py  spectrumtools.py  utils.py  xspec.py
xga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xga/files/: add_model_list.txt  mission_event_column_name_map.json  mult_model_list.txt  parse_xselect_mdb.py  sas_errors.csv  sas_warnings.csv  xspec_model_pars.json5  (+3 more)
(+223 files in other folders)
