[build-system]
requires = ["setuptools>=80.0.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "xga"
# A placeholder version to get past the hard requirement for a version field here - will be overwritten by
#  versioneer
#version = "0.0.0"
dynamic = ["version"]
description = "Python package to easily generate and analyse X-ray astronomy data products, ideal for investigating large samples."
authors = [
    { name = "David J Turner", email = "djturner@umbc.edu" },
    { name = "Jessica Pilling"}
]
readme = "README.md"
license = { file = "BSD-3-Clause" }
license-files = ["LICENSE*"]
requires-python = ">=3.10"
urls = { Homepage = "https://github.com/DavidT3/XGA", Documentation = "https://xga.readthedocs.io/", Issues = "https://github.com/DavidT3/XGA/issues"}
dependencies = [
    "astropy>=6.1.2",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "regions>=0.9",
    "pandas>=2.2.2",
    "fitsio>=1.2.1",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "pyabel>=0.9",
    "corner>=2.2.2",
    "emcee>=3.1.6",
    "tabulate>=0.9.0",
    "getdist>=1.4.7",
    "exceptiongroup>=1.0.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xga*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"xga" = [
    "files/*",
    "xspec_scripts/*"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "xga/_version.py"
versionfile_build = "xga/_version.py"
tag_prefix = ""