[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xga"
dynamic = ["version"]
description = "Python package to easily generate and analyse X-ray astronomy data products, ideal for investigating large samples."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "David J Turner", email = "djturner@umbc.edu"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "astropy>=6.1.2",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "regions>=0.9",
    "pandas>=2.2.2",
    "fitsio>=1.2.1",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "pyabel>=0.9",
    "corner>=2.2.2",
    "emcee>=3.1.6",
    "tabulate>=0.9.0",
    "getdist>=1.4.7",
    "exceptiongroup>=1.0.4",
    "importlib_resources~=6.5.2",
]

[project.optional-dependencies]
docs = [
    "Sphinx==8.1.3",
    "nbsphinx",
    "sphinx_rtd_theme",
    "ipython",
    "docutils",
    "ipympl",
    "urllib3",
    "jinja2",
]
test = [
    "pytest",
]

[project.urls]
"Homepage" = "http://github.com/DavidT3/XGA"
"Bug Tracker" = "http://github.com/DavidT3/XGA/issues"

[tool.setuptools]
packages = ["xga"]
include-package-data = true

[tool.setuptools.package-data]
"xga.files" = ["*"]
"xga.xspec_scripts" = ["*"]

[tool.setuptools_scm]
write_to = "xga/_version.py"
